# image_transfer

./: .gitignore  LICENCE.txt  README.md  main.py  pyproject.toml  utils.py
.github/workflows/: cd-publish.yml  ci-tests-master.yml  ci-tests-prod.yml  ci-tests.yml
docs/: format_codes.md
src/imgtrf/: __main__.py  cli.py  core.py  exceptions.py  logger.py  main.py  meta.py
tests/: conftest.py  test_cli.py  test_core.py  test_main.py  test_meta.py
