[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "image-transfer"
version = "0.1.2"
authors = [
    { name="Magnus Sommarsjö"}
]
description = "Transfer images and videos from one directoy to another with new folder structure by date"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
    "Development Status :: 3 - Alpha",
]
requires-python = ">=3.8"
dependencies = [
    "Pillow",
    "ffmpeg-python",
    "typer[all]",
    "rich"
]

[project.urls]
"Homepage" = "https://github.com/magnussommarsjo/image_transfer"
"Bug Tracker" = "https://github.com/magnussommarsjo/image_transfer/issues"

[project.optional-dependencies]
test = [
    "piexif",
    "pytest>=6.0",
]

dev = [
    "image-transfer[test]",
    "black",
]

[project.scripts]
imgtrf = "imgtrf.__main__:app"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]